chasse aux parenthèses

--- a/fig_plis/article_plis.tex
+++ b/fig_plis/article_plis.tex
@@ -38,12 +38,11 @@ amsmath,amssymb,prl]{revtex4-1}
 
 \section*{Introduction}
 
-\seb{\it Terminologie generale a uniformiser dans tout l'article: sheet $\rightarrow$ layer, floor and ceiling $\rightarrow$ bottom and top walls, impervious $\rightarrow$ impermeable, non-monotonous $\rightarrow$ nonmonotonic, lateral load $\rightarrow$ transverse load, longitudinal/compression load $\rightarrow$ compressional load, laterally $\rightarrow$ transversely. A discuter puis a changer partout systematiquement ? De facon generale, il reste encore beaucoup de choses entre parentheses: soit c'est utile et on enleve les parentheses, soit c'est inutile et on supprime ?}
 
-There are many ways and reasons for a film to wrinkle. An elastic film buckles due to excess area with respect to its boundaries. Wrinkling is a buckling hindered by a substrate: the mismatch of elastic properties between the film and the substrate selects the preferred wrinkling wavelength \sseb{as discovered originally in aeronautics} \cite{Gough1940, Bijlaard1946}. On the engineering side the last two decades have seen a bloom of methods to obtain well-controlled patterns via linear~\cite{Bowden1998, Genzer2006, Hu1998, Kim2010, Vandeparre2011, Li2013} or nonlinear wrinkling~\cite{Efimenko2005, Guvendiren2010, Kim2011a, Brau2011}. Such patterns can be triggered by temperature dilation, swelling (eventually pH or light induced) or the removal of pre-strain. On the biology side wrinkling-controlled morphogenesis is ubiquitous: ageing and the loss of elastic fibres makes our skin wrinkles~\cite{Bissett1987, Genzer2006}, difference in growth rates between the gut tube and its dorsal anchoring is responsible for the vilification of guts~\cite{Savin2011, Ciarletta2014, Shyer2013}, localized cell death in biofilms focuses mechanical forces and initiates 3D labyrinth pattern~\cite{Trejo2013, Asally2012}. On the physics side analogues of wrinkling have been found in situations where an effective substrate comes from the resistance to uniaxial stretching~\cite{Cerda2003}, from gravity~\cite{Kolinski2009, Vella2009, Pineirua2013, Lucantonio2013} \sseb{(linked to the pioneering work of Smoluchowski~\cite{Smoluchowski1927})} \seb{\it utile?}, from boundaries~\cite{Vandeparre2011a, Li2013} or from adhesion~\cite{Vella2009a}. Dealing only with (semi)infinite substrates, Biot generalised the elasticity of both the film and the substrate to viscoelasticity~\cite{Biot1957} or poroelasticity~\cite{Biot1964}, leading to time-dependent kinetic wavelength selection. Stability analysis of a film lying on a thin viscous substrate was studied only recently~\cite{Huang2002} \seb{and to date this confined situation remains without experimental equivalent.} \sseb{as for a free interface gravity dominates}
+There are many ways and reasons for a film to wrinkle. An elastic film buckles due to excess area with respect to its boundaries. Wrinkling is a buckling hindered by a substrate: the mismatch of elastic properties between the film and the substrate selects the preferred wrinkling wavelength \sseb{as discovered originally in aeronautics} \cite{Gough1940, Bijlaard1946}. On the engineering side the last two decades have seen a bloom of methods to obtain well-controlled patterns via linear~\cite{Bowden1998, Genzer2006, Hu1998, Kim2010, Vandeparre2011, Li2013} or nonlinear wrinkling~\cite{Efimenko2005, Guvendiren2010, Kim2011a, Brau2011}. Such patterns can be triggered by temperature dilation, swelling or the removal of pre-strain. On the biology side wrinkling-controlled morphogenesis is ubiquitous: ageing and the loss of elastic fibres makes our skin wrinkles~\cite{Bissett1987, Genzer2006}, difference in growth rates between the gut tube and its dorsal anchoring is responsible for the vilification of guts~\cite{Savin2011, Ciarletta2014, Shyer2013}, localized cell death in biofilms focuses mechanical forces and initiates 3D labyrinth pattern~\cite{Trejo2013, Asally2012}. On the physics side analogues of wrinkling have been found in situations where an effective substrate comes from the resistance to uniaxial stretching~\cite{Cerda2003}, from gravity~\cite{Kolinski2009, Vella2009, Pineirua2013, Lucantonio2013}, from boundaries~\cite{Vandeparre2011a, Li2013} or from adhesion~\cite{Vella2009a}. Dealing only with (semi)infinite substrates, Biot generalised the elasticity of both the film and the substrate to viscoelasticity~\cite{Biot1957} or poroelasticity~\cite{Biot1964}, leading to time-dependent kinetic wavelength selection. Stability analysis of a film lying on a thin viscous substrate was studied only recently~\cite{Huang2002} \seb{and to date this confined situation remains without experimental equivalent.} \sseb{as for a free interface gravity dominates}
 \sseb{ over viscous substrate} \seb{Pas tr\`es clair, \`a reformuler~?}
 
-Yet, in a biological context, thin tissues (epithelimum, endothelium) are \seb{naturally confined and }immersed in a nearly buoyant medium (lymph, blood, mucus), a practical situation that could lead to wrinkling on a thin viscous substrate. Moreover, most biological films are porous, and little is known on the interplay between permeability and wrinkling~\cite{Ma2004,Longley2013}. \sseb{Such interplay is also at stake in daily life problems} 
+Yet, in a biological context, thin tissues, e.g. epithelimum or endothelium, are \seb{naturally confined and }immersed in a nearly buoyant medium, e.g. lymph, blood or mucus, a practical situation that could lead to wrinkling on a thin viscous substrate. Moreover, most biological films are porous, and little is known on the interplay between permeability and wrinkling~\cite{Ma2004,Longley2013}. \sseb{Such interplay is also at stake in daily life problems} 
 \sseb{such as wrinkles encountered while putting up}
 \sseb{ wall paper~\cite{Pacione1991}.} \seb{Therefore benchmark experiments that explore the possibility of wrinkling in confined soft materials immersed in a buoyancy-matched viscous medium are in line to get fundamental insights into such a biologically relevant situation.}
 
@@ -62,21 +61,21 @@ The main goal of the present study is thus to identify the selection mechanism o
 
 \begin{figure}[b]
 	\includegraphics{acidification}
-	\caption{Acid-induced protein gel properties behave nonmonotonically with pH. (a) pH decrease over time in a 4\%w sodium caseinate solution acidified by 4\%w GDL. Horizontal line \seb{The horizontal line? \it je laisse comme ca dans tous les captions.} indicates isoelectric pH of casein. (b) Evolution of the storage modulus $G'$ measured in a rheometer (full adhesion to rotor and stator). (c) Evolution of pore size measured by confocal microscopy in a half-coated microscopy cell (no adhesion to top wall, syn\ae{}resis and swelling allowed).}
+	\caption{Acid-induced protein gel properties behave nonmonotonically with pH. (a) pH decrease over time in a 4\%w sodium caseinate solution acidified by 4\%w GDL. Horizontal line \seb{The horizontal line? \it je laisse comme ca dans tous les captions.} indicates isoelectric pH of casein. (b) Evolution of the storage modulus $G'$ measured in a rheometer with full adhesion to rotor and stator. (c) Evolution of pore size measured by confocal microscopy in a half-coated microscopy cell with no adhesion to top wall, syn\ae{}resis and swelling allowed.}
 	\label{fig:acidification}
 \end{figure}
 
 %discuter la figure 1c
 
-The slow acidification of a protein (sodium caseinate) solution down to the isoelectric pH induces gelation (Fig.~\ref{fig:acidification}a). Since caseins strongly adsorb to interfaces, the resulting gel sticks to the container walls, allowing rheological measurements (Fig.~\ref{fig:acidification}b). Further decrease of the pH beyond the isoeletric point weakens the gel \seb{due to \dots} \seb{\it Il manque une explication ici ainsi que des references generales sur la prise du yaourt}. This nonmonotonic behaviour of the elastic modulus translates into a nonmonotonic mesh size in a microscopy cell (slit geometry) coated so that the casein cannot adsorb on the top wall (Fig.~\ref{fig:acidification}c), i.e. into syn\ae{}resis (solvent expulsion) followed by swelling.
+The slow acidification of a protein (sodium caseinate) solution down to the isoelectric pH induces gelation (Fig.~\ref{fig:acidification}a). Since caseins strongly adsorb to interfaces, the resulting gel sticks to the container walls, allowing rheological measurements (Fig.~\ref{fig:acidification}b). Further decrease of the pH beyond the isoeletric point weakens the gel \seb{due to \dots} \seb{\it Il manque une explication ici ainsi que des references generales sur la prise du yaourt}. This nonmonotonic behaviour of the elastic modulus translates into a nonmonotonic mesh size in a microscopy cell of slit geometry coated so that the casein cannot adsorb on the top wall (Fig.~\ref{fig:acidification}c), i.e. into syn\ae{}resis (solvent expulsion) followed by swelling.
 
-Figure~\ref{fig:sideview}a shows confocal measurements in the case where both top and bottom walls have been coated. Starting from a homogeneous solution (black margins correspond to the glass walls), the gel forms and simultaneously expells solvent on both sides. Since two interfaces \seb{clearly separate} a protein-rich phase and a protein-poor (water) phase, we model the resulting situation as a porous elastic film of thickness $h$ sandwiched between two viscous layers of respective thicknesses $H_1$ and $H_2$ \seb{in a cell of thickness $e=H_1+h+H_2$} (Fig.~\ref{fig:sideview}d) \seb{\it $e$ n'etait defini nulle part + attention sur la Fig.~3c il vaudrait mieux choisir de montrer $H_1$ et $H_2$ a un endroit ou le gel est horizontal, sinon le schema n'est valable qu'aux petites deformations + du coup ce sera it mieux de mettre le schema en 3b ?}. Relative increase in protein concentration during syn\ae{}resis can be deduced from the brighter fluorescence in the second panel of Fig.~\ref{fig:sideview}a. Extracting the top and bottom surface of the gel phase allows for quantitative measurements of the relative volume (Fig.~\ref{fig:sideview}b) and excess surface area of the gel film (Fig.~\ref{fig:sideview}c). This confirms that the instability is due to swelling.
+Figure~\ref{fig:sideview}a shows confocal measurements in the case where both top and bottom walls have been coated. Starting from a homogeneous solution (first panel Fig.~\ref{fig:sideview}a where black margins correspond to the glass walls), the gel forms and simultaneously expels solvent on both sides. Since two interfaces \seb{clearly separate} a protein-rich phase and a protein-poor phase, we model the resulting situation as a porous elastic film of thickness $h$ sandwiched between two viscous layers of respective thicknesses $H_1$ and $H_2$ \seb{in a cell of thickness $e=H_1+h+H_2$} (Fig.~\ref{fig:sideview}d) \seb{\it $e$ n'etait defini nulle part + attention sur la Fig.~3c il vaudrait mieux choisir de montrer $H_1$ et $H_2$ a un endroit ou le gel est horizontal, sinon le schema n'est valable qu'aux petites deformations + du coup ce sera it mieux de mettre le schema en 3b ?}. Relative increase in protein concentration during syn\ae{}resis can be deduced from the brighter fluorescence in the second panel of Fig.~\ref{fig:sideview}a. Extracting the top and bottom surface of the gel phase allows for quantitative measurements of the relative volume (Fig.~\ref{fig:sideview}b) and excess surface area of the gel film (Fig.~\ref{fig:sideview}c). This confirms that the instability is due to swelling.
 
-Note that adhesion to side walls is necessary to prevent total syn\ae{}resis and thus allow subsequent planar stresses to develop while swelling: the only situation were wrinkling was observed is when both top and bottom walls are coated. We also confirmed that at any given \seb{point in time and space} the thickness $h$ of the film of gel is homogeneous. The contrast in transmission microscopy (Fig.~\ref{fig:dynamics}a) is \seb{therefore} not due to thickness inhomogeneities but to altitude gradients. \seb{Indeed} the length of the optical path (along \seb{the vertical direction} $z$) through the gel phase is larger where the gel makes a slope compared to a flat situation, as indicated by the yellow vertical lines in Fig.~\ref{fig:sideview}d.
+Note that adhesion to side walls is necessary to prevent total syn\ae{}resis and thus allow subsequent planar stresses to develop while swelling: the only situation were wrinkling was observed is when both top and bottom walls are coated. We also confirmed that at any given \seb{point in time and space} the thickness $h$ of the film of gel is homogeneous. The contrast in transmission microscopy (Fig.~\ref{fig:dynamics}a) is \seb{therefore} not due to thickness inhomogeneities but to altitude gradients. \seb{Indeed} the length of the optical path along \seb{the vertical direction} $z$ through the gel phase is larger where the gel makes a slope compared to a flat situation, as indicated by the yellow vertical lines in Fig.~\ref{fig:sideview}d.
 
 \begin{figure}
 	\includegraphics{sideview}
-	\caption{Measurements and modeling. (a) Confocal ($x$,$z$) cuts showing syn\ae{}resis, swelling and (cascade) wrinkling. Scale bar is \SI{100}{\micro\metre} (real size ratio). Evolution of (b) volume of the gel phase relative to cell volume and (c) excess area measured by confocal microscopy. Crosses correspond to times in (a). (d) Schematic side view of the cell. The constant thickness gel film (orange) is surrounded by water. Yellow lines show the path of transmitted light through the gel phase. A region of interest is highlighted in gray.}
+	\caption{Measurements and modeling. (a) Confocal ($x$,$z$) cuts showing syn\ae{}resis, swelling, wrinkling and cascade buckling. Scale bar is \SI{100}{\micro\metre} (real size ratio). Evolution of (b) volume of the gel phase relative to cell volume and (c) excess area measured by confocal microscopy. Crosses correspond to times in (a). (d) Schematic side view of the cell. The constant thickness gel film (orange) is surrounded by water. Yellow lines show the path of transmitted light through the gel phase. A region of interest is highlighted in gray.}
 	\label{fig:sideview}
 \end{figure}
 
@@ -100,11 +99,11 @@ We identify three possible candidates for the transverse load $\sigma_\perp$: th
 	\label{fig:DarcyPoiseuille}
 \end{figure*}
 
-In a first limit where the film of gel would be sitting (\seb{without} sticking) to the bottom wall of the cell ($H_1\rightarrow0$), creating a 2D blister requires flowing solvent of viscosity $\eta$ through the gel of permeability $\alpha$. Darcy law relates the pressure gradient (\seb{estimated as} $\sigma_\perp/h$) to the volume flux per unit area $v = \frac{\alpha}{\eta}\frac{\sigma_\perp}{h} = \frac{dA}{dt}$. Injecting this expression in Eq.~(\ref{eq:lstar}) yields the wavelength of the Darcy mode as
+In a first limit where the film of gel would be sitting without sticking to the bottom wall of the cell ($H_1\rightarrow0$), creating a 2D blister requires flowing solvent of viscosity $\eta$ through the gel of permeability $\alpha$. Darcy law relates the pressure gradient, estimated as $\sigma_\perp/h$, to the volume flux per unit area $v = \frac{\alpha}{\eta}\frac{\sigma_\perp}{h} = \frac{dA}{dt}$. Injecting this expression in Eq.~(\ref{eq:lstar}) yields the wavelength of the Darcy mode as
 \begin{equation}
 \lambda_D \sim h^{1/2} \alpha^{1/4} \Upsilon^{1/4}
 \end{equation}
-where $\Upsilon = B\tau/\eta$ is a dimensionless viscoelastic factor quantifying the relative stiffness of the film and the solvent at a characteristic time $\tau$. This expression emphasizes the kinetic nature of the wavelength selection \seb{through Darcy flow}. However we note that the wavelength of (a generation of) the pattern does not evolve with time (see Fig.~\ref{fig:dynamics}a and Sup. Fig.~\ref{fig:growth}) once the gel is touching both walls, we can deduce the relevant $\tau$ from the growth of the  pattern (see Supplementary Method for the precise definition). \seb{\it La phrase precedente n'est pas assez claire et semble contredire le texte en supplementary : a reformuler.}
+where $\Upsilon = B\tau/\eta$ is a dimensionless viscoelastic factor quantifying the relative stiffness of the film and the solvent at a characteristic time $\tau$. This expression emphasizes the kinetic nature of the wavelength selection \seb{through Darcy flow}. However we note that the wavelength of a generation of the pattern does not evolve with time (see Fig.~\ref{fig:dynamics}a and Sup. Fig.~\ref{fig:growth}) once the gel is touching both walls, we can deduce the relevant $\tau$ from the growth of the  pattern (see Supplementary Method for the precise definition). \seb{\it La phrase precedente n'est pas assez claire et semble contredire le texte en supplementary : a reformuler.}
 
 The opposite limiting case is when the gel film lies in the middle of the cell ($H_1=H_2$) and impermeable ($\alpha\rightarrow 0$). There destabilisation over a wavelength $\lambda$ creates a lubrication ($H\ll\lambda$) flow in the viscous layers. By symmetry the transverse load across the gel $\sigma_\perp$ is also the pressure difference over the wavelength. Using a Poiseuille profile for the flow, $\frac{dA}{dt} \sim \sigma_\perp \frac{H^3}{\eta\lambda^2}$. Injecting this expression in Eq.~(\ref{eq:lstar}) yields the wavelength of the Poiseuille mode as
 \begin{equation}
@@ -144,8 +143,7 @@ Data shown in Fig.~\ref{fig:acidification} a-b were obtained with a SevenCompact
 Confocal experiments were conducted at SFR BioSciences Gerland - Lyon Sud (US8 / UMS3444).
 The authors thank José Bico, Arezeki Boudaoud, Cyprien Gay, L. Mahadevan and Olivier Pierre-Louis for theoretical insights at various stages of the research. 
 Precious experimental ideas came from Denis Bartolo, Elisabeth Bouchaud and Maxime Lefranc.
-Alan Parker at Firmenich provided the casein and GDL; \sseb{Catherine Barentin provided the (late)}
-\sseb{glass Couette cell of SM.}
+Alan Parker at Firmenich provided the casein and GDL; 
 Special thanks to Madame Biot who made M.A. Biot work accessible through the \href{http://www.olemiss.edu/sciencenet/poronet/}{poronet} website. 
 ML thanks the Region Rhône Alpes and the Programme d'Avenir Lyon - Saint Etienne (PALSE NoGELPo) for postoctoral grant. 
 TG and MN acknowledge funding from ANR XXXX. 
@@ -200,7 +198,7 @@ Correspondence and requests for materials should be addressed to TG (\href{mailt
 
 \begin{figure}
 	\includegraphics{mesh}
-	\caption{Gel microstructure. (a) Detail of a confocal micrograph of a 4\%w casein in water acidified with 4\%w GDL, when only the microscope slide is coated (not the cover slip). Images were taken at times corresponding to the minimum in mesh size. Scale bar is \SI{10}{\micro\metre}. (b) Corresponding radially averaged Fourier transform. \seb{\it Fourier transform or Fourier spectrum or power spectrum? Clarify?} Black line is the best fit by Eq.~(\ref{eq:fractalS}) with $\xi=\SI{2.0}{\micro\metre}$ and $d_{3D}=2.27$. Inset shows the center of the \sseb{non radial average} spectrum \seb{using a} logarithmic color scale. Scale bar is \SI{10}{\per\micro\metre}. (c-d) Same as (a-b) in a 50\%w \seb{glycerol--water mixture leading to} $\xi=\SI{0.3}{\micro\metre}$ and $d_{3D}=3$.}
+	\caption{Gel microstructure. (a) Detail of a confocal micrograph of a 4\%w casein in water acidified with 4\%w GDL, when only the microscope slide is coated, not the cover slip. Images were taken at times corresponding to the minimum in mesh size. Scale bar is \SI{10}{\micro\metre}. (b) Corresponding radially averaged Fourier transform. \seb{\it Fourier transform or Fourier spectrum or power spectrum? Clarify?} Black line is the best fit by Eq.~(\ref{eq:fractalS}) with $\xi=\SI{2.0}{\micro\metre}$ and $d_{3D}=2.27$. Inset shows the center of the \sseb{non radial average} spectrum \seb{using a} logarithmic color scale. Scale bar is \SI{10}{\per\micro\metre}. (c-d) Same as (a-b) in a 50\%w \seb{glycerol--water mixture leading to} $\xi=\SI{0.3}{\micro\metre}$ and $d_{3D}=3$.}
 	\label{fig:mesh}
 \end{figure}
 
@@ -246,7 +244,7 @@ From these data, we obtain for each stack the volume and thickness of the gel ph
 \subsection*{Characteristic time measurement}
 \begin{figure}
 	\includegraphics{growth}
-	\caption{Growth of the instability. (a) Evolution of the gel velocity $v$ \seb{averaged} over the whole surface. Inset: Evolution of the peak-to-peak amplitude $A(t)$ in semi logarithmic scale. Black line is the best exponential fit with $\tau=\SI{90}{\second}$. (b) Evolution of the bottom profile of the gel from onset of instability (yellow) to contact to both walls (brown). Note that the longitudinal size of the blister evolves in this regime. Thick black curve is the profile at much longer times. Note that the blister foot (highlighted by the orange vertical line) has not moved since contact. \seb{\it Utiliser des symboles ($t$, $r$,$ A(t)$) plutot que des mots ? + j'ai plusieurs petites questions par rapport a cette figure.}}
+	\caption{Growth of the instability. (a) Evolution of the gel velocity $v$ \seb{averaged} over the whole surface. Inset: Evolution of the peak-to-peak amplitude $A(t)$ in semi logarithmic scale. Black line is the best exponential fit with $\tau=\SI{90}{\second}$. (b) Evolution of the bottom profile of the gel from onset of instability (yellow) to contact to both walls (brown). Note that the longitudinal size of the blister evolves in this regime. Thick black curve is the profile at much longer times. Note that the blister foot, highlighted by the orange vertical line, has not moved since contact. \seb{\it Utiliser des symboles ($t$, $r$,$ A(t)$) plutot que des mots ? + j'ai plusieurs petites questions par rapport a cette figure.}}
 	\label{fig:growth}
 \end{figure}
 
@@ -324,7 +322,7 @@ with $\Upsilon = B\tau/\eta$ the viscoelastic factor. The dominant wavelength fo
 \lambda_P = \pi\sqrt{hH}\left(\frac{2}{9}\Upsilon\right)^{1/6}
 \end{equation}
 
-The scaling is then identical to the (much more involved) derivation by \citet{Huang2002}. When the elastic film is sandwiched between two viscous layers of respective thickness $H_1$ and $H_2$, the linearity of Eq.~(\ref{eq:mecheq}) allows us to use an effective substrate of thickness 
+When the elastic film is sandwiched between two viscous layers of respective thickness $H_1$ and $H_2$, the linearity of Eq.~(\ref{eq:mecheq}) allows us to use an effective substrate of thickness 
 \begin{equation}
 \frac{1}{H^3} = \frac{1}{H_1^3}+\frac{1}{H_2^3}.
 \end{equation}
